[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/WorldMap/WorldMap_UI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/WorldMap/InternalResourceController.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/WorldMap/MineralLevels.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/WorldMap/ResourceUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/WorldMap/HazardsContainer.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/OpenSans-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.545098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 0 )
border_blend = true

[node name="WorldMap_UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="InternalPanel" type="Panel" parent="."]
margin_right = 300.0
margin_bottom = 900.0
mouse_filter = 2

[node name="StoredResourcesLabel" type="RichTextLabel" parent="InternalPanel"]
margin_right = 300.0
margin_bottom = 50.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Stored Resources[/center]"
text = "Stored Resources"
scroll_active = false

[node name="MineralLevelsLabel" type="RichTextLabel" parent="InternalPanel"]
margin_top = 630.0
margin_right = 300.0
margin_bottom = 678.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Mineral Levels[/center]"
text = "Mineral Levels"
scroll_active = false

[node name="InternalResourceController" parent="InternalPanel" instance=ExtResource( 2 )]
margin_left = 10.0
margin_top = 50.0
margin_right = -10.0
margin_bottom = -275.0

[node name="MineralPanel" type="Panel" parent="InternalPanel"]
margin_left = 10.0
margin_top = 683.0
margin_right = 290.0
margin_bottom = 890.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="MineralLevels" parent="InternalPanel/MineralPanel" instance=ExtResource( 3 )]
margin_left = 35.6102
margin_top = 10.0
margin_right = -4.3898
margin_bottom = -30.0

[node name="ExternalPanel" type="Panel" parent="."]
margin_left = 1310.0
margin_right = 1600.0
margin_bottom = 900.0
mouse_filter = 2

[node name="ResourcePanel" type="Panel" parent="ExternalPanel"]
margin_left = 10.0
margin_top = 92.0
margin_right = 280.0
margin_bottom = 612.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="ResourceUI" parent="ExternalPanel/ResourcePanel" instance=ExtResource( 4 )]
margin_left = 10.0
margin_top = 8.0
margin_right = 260.0
margin_bottom = 508.0

[node name="HazardPanel" type="Panel" parent="ExternalPanel"]
margin_left = 10.0
margin_top = 660.0
margin_right = 280.0
margin_bottom = 890.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="HazardsContainer" parent="ExternalPanel/HazardPanel" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -207.0
margin_right = 79.0
margin_bottom = -16.0

[node name="TileResourcesLabel" type="RichTextLabel" parent="ExternalPanel"]
margin_top = 40.0
margin_right = 290.0
margin_bottom = 92.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Nutrients[/center]"
text = "Nutrients"

[node name="TileResourcesLabel2" type="RichTextLabel" parent="ExternalPanel"]
margin_right = 290.0
margin_bottom = 52.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][u]Current Tile[/u][/center]"
text = "Current Tile"

[node name="TileHazardsLabel" type="RichTextLabel" parent="ExternalPanel"]
margin_top = 612.0
margin_right = 290.0
margin_bottom = 664.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Environment[/center]"
text = "Environment"

[node name="MenuPanel" type="Panel" parent="."]
margin_left = 290.0
margin_top = 830.0
margin_right = 1310.0
margin_bottom = 900.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MenuPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -380.0
margin_top = -51.0
margin_right = 350.0
margin_bottom = -19.0
mouse_filter = 2
custom_constants/separation = 20

[node name="AcquireResources" type="Button" parent="MenuPanel/HBoxContainer"]
margin_right = 167.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Acquire Resources"

[node name="EjectResources" type="Button" parent="MenuPanel/HBoxContainer"]
margin_left = 187.0
margin_right = 354.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Eject Resources (TBA)"

[node name="CheckGenome" type="Button" parent="MenuPanel/HBoxContainer"]
margin_left = 374.0
margin_right = 541.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Check Genome"

[node name="EndMapTurn" type="Button" parent="MenuPanel/HBoxContainer"]
self_modulate = Color( 1, 0.556863, 0.556863, 1 )
margin_left = 561.0
margin_right = 730.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "End Map Turn"
[connection signal="pressed" from="MenuPanel/HBoxContainer/EjectResources" to="." method="_on_EjectResources_pressed"]
[connection signal="pressed" from="MenuPanel/HBoxContainer/EndMapTurn" to="." method="_on_EndMapTurn_pressed"]
